// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/InventoryAddEdit edits inventory item: form props 1`] = `
Object {
  "UNICEFSections": Array [
    Object {
      "description": "",
      "documentId": "1c2be1bb-3b1b-4978-849d-e2a0ef4d445d",
      "key": "HEALTH",
      "label": "Health",
      "resolveSettings": false,
      "serverVersion": 3,
      "settingIdentifier": "inventory_unicef_sections",
      "settingMetadataId": "48",
      "settingsId": "3",
      "type": "SettingConfiguration",
      "uuid": "8b723a4e-9df6-492f-98bf-2eaa5675a07e",
      "v1Settings": false,
      "value": "Health",
    },
    Object {
      "description": "",
      "documentId": "1c2be1bb-3b1b-4978-849d-e2a0ef4d445d",
      "key": "WASH",
      "label": "WASH",
      "resolveSettings": false,
      "serverVersion": 3,
      "settingIdentifier": "inventory_unicef_sections",
      "settingMetadataId": "49",
      "settingsId": "3",
      "type": "SettingConfiguration",
      "uuid": "ccd68cfc-eb23-4262-a924-3c3bc3f12ceb",
      "v1Settings": false,
      "value": "WASH",
    },
    Object {
      "description": "",
      "documentId": "1c2be1bb-3b1b-4978-849d-e2a0ef4d445d",
      "key": "NUTRITION",
      "label": "Nutrition",
      "resolveSettings": false,
      "serverVersion": 3,
      "settingIdentifier": "inventory_unicef_sections",
      "settingMetadataId": "50",
      "settingsId": "3",
      "type": "SettingConfiguration",
      "uuid": "c3199b6e-35c1-4c9b-b53b-cde89be094b0",
      "v1Settings": false,
      "value": "Nutrition",
    },
  ],
  "cancelURL": "/inventory-items",
  "donors": Array [
    Object {
      "description": "",
      "documentId": "3598a370-1bd1-41ed-8ef6-d28ad3ff700f",
      "key": "ADB",
      "label": "ADB",
      "resolveSettings": false,
      "serverVersion": 4,
      "settingIdentifier": "inventory_donors",
      "settingMetadataId": "56",
      "settingsId": "4",
      "type": "SettingConfiguration",
      "uuid": "1585a75d-fe4e-4ef3-8a4f-97fc76ed79bd",
      "v1Settings": false,
      "value": "ADB",
    },
    Object {
      "description": "",
      "documentId": "3598a370-1bd1-41ed-8ef6-d28ad3ff700f",
      "key": "NATCOM_BELGIUM",
      "label": "NatCom Belgium",
      "resolveSettings": false,
      "serverVersion": 4,
      "settingIdentifier": "inventory_donors",
      "settingMetadataId": "57",
      "settingsId": "4",
      "type": "SettingConfiguration",
      "uuid": "eb70bad9-3907-45fd-9a59-d197c25d7fc3",
      "v1Settings": false,
      "value": "NatCom Belgium",
    },
  ],
  "initialValues": Object {
    "accountabilityEndDate": "2021-05-02T03:00:00.000Z",
    "deliveryDate": "2020-01-02T03:00:00.000Z",
    "donor": "ADB",
    "poNumber": "101",
    "productName": undefined,
    "quantity": "",
    "unicefSection": "Health",
  },
  "inventoryID": "69227a92-7979-490c-b149-f28669c6b760",
  "openSRPBaseURL": "https://mg-eusm-staging.smartregister.org/opensrp/rest/",
  "products": Array [
    Object {
      "accountabilityPeriod": 12,
      "appropriateUsage": "Note in the comments whatever items may be missing from the kit. as well as other items which the midwife may feel are necessary",
      "availability": "Kit composed of +/- 50 items used by midwives during labour. Supplied in a box marked. It should be located in the maternity unit of the facility.",
      "condition": "The kit is designed to be used for approximately 50 births. After that, key components may be missing, its important to check with the midwife that the kit can still be used fully.",
      "isAttractiveItem": true,
      "materialNumber": "MT-124",
      "photoURL": "http://mg-eusm-staging.smartregister.org/opensrp/multimedia/media/3",
      "productName": "Motorbyke",
      "serverVersion": 12,
      "uniqueId": 3,
    },
    Object {
      "accountabilityPeriod": 12,
      "appropriateUsage": "Note in the comments whatever items may be missing from the kit. as well as other items which the midwife may feel are necessary",
      "availability": "Kit composed of +/- 50 items used by midwives during labour. Supplied in a box marked. It should be located in the maternity unit of the facility.",
      "condition": "The kit is designed to be used for approximately 50 births. After that, key components may be missing, its important to check with the midwife that the kit can still be used fully.",
      "isAttractiveItem": false,
      "materialNumber": "MT-124",
      "photoURL": "",
      "productName": "Scale",
      "serverVersion": 26,
      "uniqueId": 2,
    },
    Object {
      "accountabilityPeriod": 12,
      "appropriateUsage": "Note in the comments whatever items may be missing from the kit. as well as other items which the midwife may feel are necessary",
      "availability": "Kit composed of +/- 50 items used by midwives during labour. Supplied in a box marked. It should be located in the maternity unit of the facility.",
      "condition": "The kit is designed to be used for approximately 50 births. After that, key components may be missing,  its important to check with the midwife that the kit can still be used fully.",
      "isAttractiveItem": false,
      "materialNumber": "MT-124",
      "photoURL": "http://mg-eusm-staging.smartregister.org/opensrp/multimedia/media/5",
      "productName": "Scale Kit test",
      "serverVersion": 23,
      "uniqueId": 5,
    },
    Object {
      "accountabilityPeriod": 1,
      "appropriateUsage": "",
      "availability": "Test optional Fields",
      "condition": "",
      "isAttractiveItem": false,
      "materialNumber": "MT-123",
      "photoURL": "http://mg-eusm-staging.smartregister.org/opensrp/multimedia/media/8",
      "productName": "Test optional Fields",
      "serverVersion": 18,
      "uniqueId": 8,
    },
  ],
  "redirectURL": "inventory-items-done",
  "servicePointId": "b8a7998c-5df6-49eb-98e6-f0675db71848",
}
`;

exports[`containers/InventoryAddEdit renders correctly: form props 1`] = `
Object {
  "UNICEFSections": Array [
    Object {
      "description": "",
      "documentId": "1c2be1bb-3b1b-4978-849d-e2a0ef4d445d",
      "key": "HEALTH",
      "label": "Health",
      "resolveSettings": false,
      "serverVersion": 3,
      "settingIdentifier": "inventory_unicef_sections",
      "settingMetadataId": "48",
      "settingsId": "3",
      "type": "SettingConfiguration",
      "uuid": "8b723a4e-9df6-492f-98bf-2eaa5675a07e",
      "v1Settings": false,
      "value": "Health",
    },
    Object {
      "description": "",
      "documentId": "1c2be1bb-3b1b-4978-849d-e2a0ef4d445d",
      "key": "WASH",
      "label": "WASH",
      "resolveSettings": false,
      "serverVersion": 3,
      "settingIdentifier": "inventory_unicef_sections",
      "settingMetadataId": "49",
      "settingsId": "3",
      "type": "SettingConfiguration",
      "uuid": "ccd68cfc-eb23-4262-a924-3c3bc3f12ceb",
      "v1Settings": false,
      "value": "WASH",
    },
    Object {
      "description": "",
      "documentId": "1c2be1bb-3b1b-4978-849d-e2a0ef4d445d",
      "key": "NUTRITION",
      "label": "Nutrition",
      "resolveSettings": false,
      "serverVersion": 3,
      "settingIdentifier": "inventory_unicef_sections",
      "settingMetadataId": "50",
      "settingsId": "3",
      "type": "SettingConfiguration",
      "uuid": "c3199b6e-35c1-4c9b-b53b-cde89be094b0",
      "v1Settings": false,
      "value": "Nutrition",
    },
  ],
  "cancelURL": "/inventory-items",
  "donors": Array [
    Object {
      "description": "",
      "documentId": "3598a370-1bd1-41ed-8ef6-d28ad3ff700f",
      "key": "ADB",
      "label": "ADB",
      "resolveSettings": false,
      "serverVersion": 4,
      "settingIdentifier": "inventory_donors",
      "settingMetadataId": "56",
      "settingsId": "4",
      "type": "SettingConfiguration",
      "uuid": "1585a75d-fe4e-4ef3-8a4f-97fc76ed79bd",
      "v1Settings": false,
      "value": "ADB",
    },
    Object {
      "description": "",
      "documentId": "3598a370-1bd1-41ed-8ef6-d28ad3ff700f",
      "key": "NATCOM_BELGIUM",
      "label": "NatCom Belgium",
      "resolveSettings": false,
      "serverVersion": 4,
      "settingIdentifier": "inventory_donors",
      "settingMetadataId": "57",
      "settingsId": "4",
      "type": "SettingConfiguration",
      "uuid": "eb70bad9-3907-45fd-9a59-d197c25d7fc3",
      "v1Settings": false,
      "value": "NatCom Belgium",
    },
  ],
  "initialValues": Object {
    "accountabilityEndDate": null,
    "deliveryDate": null,
    "donor": undefined,
    "poNumber": "",
    "productName": undefined,
    "quantity": "",
    "unicefSection": undefined,
  },
  "inventoryID": undefined,
  "openSRPBaseURL": "https://mg-eusm-staging.smartregister.org/opensrp/rest/",
  "products": Array [
    Object {
      "accountabilityPeriod": 12,
      "appropriateUsage": "Note in the comments whatever items may be missing from the kit. as well as other items which the midwife may feel are necessary",
      "availability": "Kit composed of +/- 50 items used by midwives during labour. Supplied in a box marked. It should be located in the maternity unit of the facility.",
      "condition": "The kit is designed to be used for approximately 50 births. After that, key components may be missing, its important to check with the midwife that the kit can still be used fully.",
      "isAttractiveItem": true,
      "materialNumber": "MT-124",
      "photoURL": "http://mg-eusm-staging.smartregister.org/opensrp/multimedia/media/3",
      "productName": "Motorbyke",
      "serverVersion": 12,
      "uniqueId": 3,
    },
    Object {
      "accountabilityPeriod": 12,
      "appropriateUsage": "Note in the comments whatever items may be missing from the kit. as well as other items which the midwife may feel are necessary",
      "availability": "Kit composed of +/- 50 items used by midwives during labour. Supplied in a box marked. It should be located in the maternity unit of the facility.",
      "condition": "The kit is designed to be used for approximately 50 births. After that, key components may be missing, its important to check with the midwife that the kit can still be used fully.",
      "isAttractiveItem": false,
      "materialNumber": "MT-124",
      "photoURL": "",
      "productName": "Scale",
      "serverVersion": 26,
      "uniqueId": 2,
    },
    Object {
      "accountabilityPeriod": 12,
      "appropriateUsage": "Note in the comments whatever items may be missing from the kit. as well as other items which the midwife may feel are necessary",
      "availability": "Kit composed of +/- 50 items used by midwives during labour. Supplied in a box marked. It should be located in the maternity unit of the facility.",
      "condition": "The kit is designed to be used for approximately 50 births. After that, key components may be missing,  its important to check with the midwife that the kit can still be used fully.",
      "isAttractiveItem": false,
      "materialNumber": "MT-124",
      "photoURL": "http://mg-eusm-staging.smartregister.org/opensrp/multimedia/media/5",
      "productName": "Scale Kit test",
      "serverVersion": 23,
      "uniqueId": 5,
    },
    Object {
      "accountabilityPeriod": 1,
      "appropriateUsage": "",
      "availability": "Test optional Fields",
      "condition": "",
      "isAttractiveItem": false,
      "materialNumber": "MT-123",
      "photoURL": "http://mg-eusm-staging.smartregister.org/opensrp/multimedia/media/8",
      "productName": "Test optional Fields",
      "serverVersion": 18,
      "uniqueId": 8,
    },
  ],
  "redirectURL": "inventory-items-done",
  "servicePointId": "b8a7998c-5df6-49eb-98e6-f0675db71848",
}
`;

exports[`containers/InventoryAddEdit renders correctly: heading 1`] = `
Object {
  "children": "Add inventory item to Ambatoharanana",
  "level": 3,
}
`;
